# sift-sentinel

./: .env.example  .gitignore  README.md  SUBMISSION.md  architecture_diagram.md  pyproject.toml
.github/workflows/: ci.yml
datasets/: simulated-intrusion.groundtruth.json
evidence/: disk.raw  memory.mem
examples/: run_offline.py
src/sift_sentinel/: __init__.py  __main__.py  accuracy.py  agent.py  audit.py  cli.py  config.py  guardrails.py  mcp_client.py  playbook.py  report.py
tests/: test_accuracy.py  test_agent_e2e.py  test_audit.py  test_guardrails.py  test_playbook.py  test_report.py
tests/unit/: test_config.py  test_playbook.py
