[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sift-sentinel"
version = "0.1.0"
description = "Autonomous DFIR triage agent that drives Protocol SIFT (MCP) on the SANS SIFT Workstation, with architectural evidence-integrity guardrails and a self-correcting Find Evil reasoning loop."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Mukunda Katta" }]
keywords = ["dfir", "incident-response", "forensics", "mcp", "agent", "sift", "find-evil"]

dependencies = [
    "anthropic>=0.40",
    "mcp>=1.2",
    "pydantic>=2.6",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sift-sentinel = "sift_sentinel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sift_sentinel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
